--- a/environment.yml
+++ b/environment.yml
@@ -62,7 +62,7 @@ dependencies:
     - pluggy==0.9.0
     - protobuf==3.7.0
     - psutil==5.6.2
-    - psycopg2==2.8.1
+    - psycopg2-binary==2.8.1
     - py==1.8.0
     - pyglet==1.3.2
     - pyopengl==3.1.0
