--- a/requirements.txt
+++ b/requirements.txt
@@ -35,7 +35,7 @@ Pillow==6.0.0
 pluggy==0.9.0
 protobuf==3.7.0
 psutil==5.6.2
-psycopg2==2.8.1
+psycopg2-binary==2.8.1
 py==1.8.0
 pyglet==1.3.2
 PyOpenGL==3.1.0
